Hair intersection with duplis causes flickering #44193

Closed
opened 2015-03-30 17:18:03 +02:00 by Lukas Tönne · 8 comments
Member

When hair intersects with dupli instances, the dupli rendering becomes random, depending on position.

Test file (with short rendered sequence): dupli_flicker_test_03.blend
Render the short anim sequence to see the effect.

Animated hair systems moving through duplis (e.g. a sheep moving through dupli grass) thus cause flickering. Tests show that this is simply depending on the hair position though, the hair object does not have to be animated.

The error only appears in Cycles renders, but not Blender Internal or the OpenGL viewport.
My guess is that this is an intersection problem of BVH nodes with curve data.

When hair intersects with dupli instances, the dupli rendering becomes random, depending on position. Test file (with short rendered sequence): [dupli_flicker_test_03.blend](https://archive.blender.org/developer/F156496/dupli_flicker_test_03.blend) Render the short anim sequence to see the effect. Animated hair systems moving through duplis (e.g. a sheep moving through dupli grass) thus cause flickering. Tests show that this is simply depending on the hair position though, the hair object does not have to be animated. The error only appears in Cycles renders, but not Blender Internal or the OpenGL viewport. My guess is that this is an intersection problem of BVH nodes with curve data.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Lukas Tönne 2015-03-30 17:18:03 +02:00
Author
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by dd0604c606

This issue was referenced by dd0604c6066a46a72fccc185bbbc592ff76c7052

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dd0604c606.

Closed by commit dd0604c606.

This issue was referenced by abb92632f8

This issue was referenced by abb92632f8cf5d988a99c474be8b5e94797147cf

This issue was referenced by blender/cycles@694f8bd54b

This issue was referenced by blender/cycles@694f8bd54b79bf2709f59ddcff0d5e8da0ad7d86
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44193
No description provided.