Fix T44193: Hair intersection with duplis causes flickering

It was an issue with what bounds to use for BVH node during construction.

Also corrected case when there are all 4 primitive types in the range and
also there're objects in the same range.